# grenache-cli

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Makefile.am
include/: Makefile.am  common.h  encode.h  io.h
m4/: Makefile.am  ax_c99_inline.m4  ax_define_descriptor.m4  ax_define_size.m4  ax_enable_x86_features.m4  ax_gcc_x86_cpu_supports.m4  ax_msg_bold.m4  ax_require_prog.m4
src/: Makefile.am  encode.c  grc-keygen.c  grc-sign.c  grc-verify.c  grenache-announce.in  grenache-get.in  grenache-keygen.in  grenache-lookup.in  grenache-put.in  io.c
tests/: Makefile.am  sign-test-vector-1.sh.in  sign-test-vector-2.sh.in  verify-test-vector-1.sh.in  verify-test-vector-2.sh.in
