############################################################################
# This file is part of Grenache Command Line Interface.                    #
#                                                                          #
# Copyright (C) 2017, 2018 Davide Scola <davide@bitfinex.com>              #
#                                                                          #
# Licensed under the Apache License,  Version 2.0 (the "License"); you may #
# not use this file except in  compliance with the License. You may obtain #
# a copy of the License at                                                 #
#                                                                          #
#       http://www.apache.org/licenses/LICENSE-2.0                         #
#                                                                          #
# Unless  required by  applicable law  or agreed  to in  writing, software #
# distributed  under the  License  is  distributed on  an  "AS IS"  BASIS, #
# WITHOUT  WARRANTIES  OR  CONDITIONS  OF  ANY  KIND,  either  express  or #
# implied. See the License for the specific language governing permissions #
# and limitations under the License.                                       #
############################################################################

EXTRA_DIST = \
ax_msg_bold.m4 \
ax_require_prog.m4 \
ax_define_size.m4 \
ax_define_descriptor.m4 \
ax_with_prog.m4 \
ax_generate_changelog.m4 \
ax_is_release.m4 \
ax_check_enable_debug.m4 \
ax_save_flags.m4 \
ax_restore_flags.m4 \
ax_require_defined.m4 \
ax_append_flag.m4 \
ax_c99_inline.m4 \
ax_gcc_func_attribute.m4 \
ax_compiler_flags_gir.m4 \
ax_check_compile_flag.m4 \
ax_check_link_flag.m4 \
ax_append_compile_flags.m4 \
ax_append_link_flags.m4 \
ax_compiler_flags_cflags.m4 \
ax_compiler_flags_cxxflags.m4 \
ax_compiler_flags_ldflags.m4 \
ax_compiler_flags.m4 \
ax_gcc_x86_cpuid.m4 \
ax_compiler_vendor.m4 \
ax_gcc_archflag.m4 \
ax_gcc_x86_cpu_supports.m4 \
ax_check_x86_features.m4 \
ax_enable_x86_features.m4

MAINTAINERCLEANFILES = \
libtool.m4 \
lt~obsolete.m4 \
ltoptions.m4 \
ltsugar.m4 \
ltversion.m4
